[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Objects/Ball.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objects/Ball.gd" type="Script" id=2]
[ext_resource path="res://Assets/Objects/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/SFX/BallBounce.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 4 )

[node name="Ball" type="KinematicBody2D" groups=["ball", "drownable", "hittable", "needs_player", "resettable"]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Arrow" type="Sprite" parent="."]
visible = false
show_behind_parent = true
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
show_behind_parent = true
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="DetectShotgun" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectShotgun"]
shape = SubResource( 2 )

[node name="BounceSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
bus = "SFX"

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="DetectShotgun" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="DetectShotgun" to="." method="_on_Area2D_area_exited"]
